--- a/package.json
+++ b/package.json
@@ -6,5 +6,23 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11"
-  }
+  },
+  "name": "event_management",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rajib3777/EVENT-MANAGEMENT.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/rajib3777/EVENT-MANAGEMENT/issues"
+  },
+  "homepage": "https://github.com/rajib3777/EVENT-MANAGEMENT#readme",
+  "description": ""
 }
